--- a/style.css
+++ b/style.css
@@ -4,4 +4,17 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  background-color: cadetblue;
+}
+
+h1 {
+  font-size: 38px;
+}
+
+input {
+  font-size: 24px;
+}
+
+button {
+  font-size: 24px;
 }
