--- a/style.css
+++ b/style.css
@@ -1,19 +1,70 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  justify-content: center;
 }
 
-h1 {
+.container {
+  border: 2px solid #000;
+  margin: 0.625rem 0.4rem 0 0.4rem;
+}
+
+.display-div:nth-child(odd) {
+  background-color: lightgray;
+}
+
+
+
+.display-div {
+  text-align: center;
+  justify-content: space-between;
+  display: flex;
+  padding: 8px;
+  width: 100%;
+  margin: 0;
+}
+
+h2 {
   font-size: 38px;
+  text-align: center;
+  justify-content: center;
+}
+
+h2::before {
+  display: block;
+  content: " ";
+  background-color: #000;
+  text-align: center;
+  width: 30%;
+  height: 4px;
 }
 
 input {
-  font-size: 24px;
+  font-size: 20px;
+  padding: 0 0.25rem;
+  border: 3px solid #000;
 }
 
-button {
+input::placeholder {
+  color: #000;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.add--btn,
+.rmBtn {
   font-size: 24px;
+  padding: 0 0.25rem;
+  border: 2px solid #000;
+  box-shadow: 2px 2px 5px 3px #000;
+  font-size: 0.9rem;
+  font-weight: bold;
+  text-align: end;
+  transform: translateX(5.1rem);
 }
