--- a/style.css
+++ b/style.css
@@ -32,15 +32,19 @@ h2 {
   font-size: 38px;
   text-align: center;
   justify-content: center;
+  margin-top: 80px;
+  margin-bottom: 30px;
 }
 
 h2::before {
   display: block;
+  position: fixed;
   content: " ";
   background-color: #000;
-  text-align: center;
-  width: 30%;
   height: 4px;
+  width: 20%;
+  top: 20%;
+  left: 40%;
 }
 
 input {
