--- a/style.css
+++ b/style.css
@@ -37,14 +37,7 @@ a:hover {
 }
 
 .a-link {
-  padding-left: 20px;
-}
-
-.dots {
-  width: 150px;
-  text-decoration: none;
-  list-style: none;
-  flex-direction: row;
+  padding: 0 20px;
 }
 
 .logo {
@@ -57,6 +50,9 @@ a:hover {
 
 .line {
   border-right: 2px solid #000;
+  padding: 0;
+  margin: 0;
+
 }
 
 .top-header,
@@ -71,9 +67,33 @@ a:hover {
   height: 50px;
 }
 
+.time-div {
+  position: fixed;
+  right: 0;
+  left: 0;
+  margin: 30px;
+  top: 50px;
+  background-color: #fff;
+  z-index: 10;
+  height: 1.56rem;
+}
+
+#timer-p {
+  display: block;
+  color: blue;
+  position: fixed;
+  right: -80%;
+  left: 0;
+  z-index: 5;
+}
+
 .container {
   border: 2px solid #000;
   margin: 0.625rem 0.4rem 0 0.4rem;
+}
+
+.add-section {
+  display: none;
 }
 
 .display-div {
@@ -89,24 +109,20 @@ a:hover {
   background-color: lightgray;
 }
 
-h2 {
+#message {
+  color: rgb(37, 112, 41);
+  font-size: 14px;
+  font-weight: 500;
+  padding-bottom: 12px;
+}
+
+h2,
+h4 {
   font-size: 38px;
   text-align: center;
   justify-content: center;
   margin-top: 60px;
   margin-bottom: 30px;
-}
-
-h2::before {
-  display: block;
-  position: relative;
-  margin-bottom: 40px;
-  content: " ";
-  background-color: #000;
-  height: 4px;
-  width: 20%;
-  top: 20%;
-  left: 40%;
 }
 
 input {
@@ -141,11 +157,13 @@ input::placeholder {
 }
 
 .contact-section {
+  display: none;
   flex: 1 0 auto;
   color: #000;
   font-size: 26px;
   font-weight: 700;
-  margin-bottom: 150px;
+  margin: 0;
+  padding: 40px 0;
 }
 
 .contact-section h3 {
@@ -165,15 +183,17 @@ input::placeholder {
 }
 
 footer {
+  position: fixed;
+  right: 0;
+  left: 0;
+  bottom: 0;
   width: 100%;
   border: 2px solid #000;
-  margin-top: 40px;
-  flex-shrink: 0;
 }
 
 .footer {
   text-align: start;
-  padding: 30px;
+  padding: 10px;
   padding-left: 1em;
   font-size: 22px;
 }
