--- a/CSS/style.css
+++ b/CSS/style.css
@@ -9,6 +9,9 @@ body {
   text-align: center;
   justify-content: center;
   padding: 30px;
+  background-image: url('/img/book2.jpeg');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .top-header,
@@ -24,7 +27,7 @@ li {
 }
 
 a {
-  color: #000;
+  color: rgb(238, 234, 229);
   text-decoration: none;
   list-style: none;
   font-size: 26px;
@@ -33,7 +36,7 @@ a {
 }
 
 a:hover {
-  color: dodgerblue;
+  color: rgb(147, 156, 126);
 }
 
 .a-link {
@@ -42,28 +45,30 @@ a:hover {
 
 .logo {
   margin-left: 30px;
-  color: #000;
+  color: rgb(238, 234, 229);
   font-size: 26px;
   font-weight: 700;
   align-items: center;
 }
 
 .line {
-  border-right: 2px solid #000;
+  border-right: 2px solid rgb(228, 228, 228);
   padding: 0;
   margin: 0;
 }
 
 .top-header,
 .book-list {
-  border: 2px solid #000;
   width: 100%;
+  border: 2px solid rgb(216, 215, 215);
 }
 
 .top-header {
   justify-content: space-between;
   align-items: center;
   height: 50px;
+  background-color: rgb(19, 18, 18);
+  opacity: 0.8;
 }
 
 .time-div {
@@ -72,22 +77,23 @@ a:hover {
   left: 0;
   margin: 30px;
   top: 50px;
-  background-color: #fff;
+  background-color: rgb(19, 18, 18);
+  opacity: 0.9;
   z-index: 10;
   height: 1.56rem;
 }
 
 #timer-p {
   display: block;
-  color: blue;
+  color: #fff;
   position: fixed;
-  right: -80%;
+  right: -65%;
   left: 0;
   z-index: 5;
 }
 
 .container {
-  border: 2px solid #000;
+  border: 2px solid rgb(216, 215, 215);
   margin: 0.625rem 0.4rem 0 0.4rem;
 }
 
@@ -109,7 +115,7 @@ a:hover {
 }
 
 #message {
-  color: rgb(37, 112, 41);
+  color: rgb(255, 255, 255);
   font-size: 14px;
   font-weight: 500;
   padding-bottom: 12px;
@@ -117,6 +123,7 @@ a:hover {
 
 h2,
 h4 {
+  color: rgb(238, 234, 229);
   font-size: 38px;
   text-align: center;
   justify-content: center;
@@ -158,7 +165,7 @@ input::placeholder {
 .contact-section {
   display: none;
   flex: 1 0 auto;
-  color: #000;
+  color: rgb(238, 234, 229);
   font-size: 26px;
   font-weight: 700;
   margin: 0;
@@ -182,15 +189,18 @@ input::placeholder {
 }
 
 footer {
+  background-color: rgb(19, 18, 18);
+  opacity: 0.8;
   position: fixed;
   right: 0;
   left: 0;
   bottom: 0;
   width: 100%;
-  border: 2px solid #000;
+  border: 2px solid rgb(216, 215, 215);
 }
 
 .footer {
+  color: rgb(238, 234, 229);
   text-align: start;
   padding: 10px;
   padding-left: 1em;
